--- a/.github/workflows/helm-start.yml
+++ b/.github/workflows/helm-start.yml
@@ -14,6 +14,24 @@ on:
         required: false
         type: string
         default: msi-cad-vw-bucket
+      frontend-version:
+        required: true
+        type: string
+      parking-garages-version:
+        required: true
+        type: string
+      parking-management-version:
+        required: true
+        type: string
+      user-tenant-management-version:
+        required: true
+        type: string
+      defect-management-version:
+        required: true
+        type: string
+      facility-management-version:
+        required: true
+        type: string
 
     secrets:
       GC_SERVICE_ACCOUNT:
@@ -73,12 +91,18 @@ jobs:
       continue-on-error: true
       run: |
         helm install gateway ${{ env.HELM_CHART_PATH }}/infrastructure/helm --set googleProject.name=${{ secrets.GC_PROJECT_ID }}
-        helm install frontend ${{ env.HELM_CHART_PATH }}/frontend/helm --set googleProject.name=${{ secrets.GC_PROJECT_ID }}
+        helm install frontend ${{ env.HELM_CHART_PATH }}/frontend/helm \
+          --set googleProject.name=${{ secrets.GC_PROJECT_ID }}
+          --set frontend.version=${{ inputs.frontend-version }}
       
     - name: Install Authentication
       continue-on-error: true
       run: |
-        helm install authentication ${{ env.HELM_CHART_PATH }}/authentication/helm --set resources.database=${{inputs.database}} --set resources.bucket=${{ inputs.bucket }} --set googleProject.name=${{ secrets.GC_PROJECT_ID }}
+        helm install authentication ${{ env.HELM_CHART_PATH }}/authentication/helm \
+          --set resources.database=${{inputs.database}} \
+          --set resources.bucket=${{ inputs.bucket }} \
+          --set googleProject.name=${{ secrets.GC_PROJECT_ID }}
+          --set userTenantManagement.version=${{ inputs.user-tenant-management-version }}
 
     # Deploy the Docker image to the GKE cluster
     - name: Start backend for each tenant with helm
@@ -86,7 +110,15 @@ jobs:
       run: |
         tenants=$(jq -r '.[].name' tenants.json)
         for tenant in $tenants; do
-          helm install parkspace-$tenant ${{ env.HELM_CHART_PATH }}/backend/helm --set namespace=$tenant --set resources.database=${{inputs.database}} --set resources.bucket=${{ inputs.bucket }} --set googleProject.name=${{ secrets.GC_PROJECT_ID }}
+          helm install parkspace-$tenant ${{ env.HELM_CHART_PATH }}/backend/helm \
+            --set namespace=$tenant \
+            --set resources.database=${{inputs.database}} \
+            --set resources.bucket=${{ inputs.bucket }} \
+            --set googleProject.name=${{ secrets.GC_PROJECT_ID }} \
+            --set parkingManagement.version=${{ inputs.parking-management-version }}
+            --set parkingGarages.version=${{ inputs.parking-garages-version }}
+            --set facilityManagement.version=${{ inputs.facility-management-version }}
+            --set defectManagement.version=${{ inputs.defect-management-version }}
         done
 
     # Create secrets and keys
@@ -105,10 +137,26 @@ jobs:
     - name: Upgrade services
       run: |
         helm upgrade gateway ${{ env.HELM_CHART_PATH }}/infrastructure/helm --set googleProject.name=${{ secrets.GC_PROJECT_ID }}
-        helm upgrade frontend ${{ env.HELM_CHART_PATH }}/frontend/helm --set googleProject.name=${{ secrets.GC_PROJECT_ID }}
-        helm upgrade authentication ${{ env.HELM_CHART_PATH }}/authentication/helm --set resources.database=${{inputs.database}} --set resources.bucket=${{ inputs.bucket }} --set googleProject.name=${{ secrets.GC_PROJECT_ID }}
+
+        helm upgrade frontend ${{ env.HELM_CHART_PATH }}/frontend/helm \
+          --set googleProject.name=${{ secrets.GC_PROJECT_ID }}
+          --set frontend.version=${{ inputs.frontend-version }}
+
+        helm upgrade authentication ${{ env.HELM_CHART_PATH }}/authentication/helm \
+          --set resources.database=${{inputs.database}} \
+          --set resources.bucket=${{ inputs.bucket }} \
+          --set googleProject.name=${{ secrets.GC_PROJECT_ID }}
+          --set userTenantManagement.version=${{ inputs.user-tenant-management-version }}
 
         tenants=$(jq -r '.[].name' tenants.json)
         for tenant in $tenants; do
-          helm upgrade parkspace-$tenant ${{ env.HELM_CHART_PATH }}/backend/helm --set namespace=$tenant --set resources.database=${{inputs.database}} --set resources.bucket=${{ inputs.bucket }} --set googleProject.name=${{ secrets.GC_PROJECT_ID }}
+          helm upgrade parkspace-$tenant ${{ env.HELM_CHART_PATH }}/backend/helm \
+            --set namespace=$tenant \
+            --set resources.database=${{inputs.database}} \
+            --set resources.bucket=${{ inputs.bucket }} \
+            --set googleProject.name=${{ secrets.GC_PROJECT_ID }} \
+            --set parkingManagement.version=${{ inputs.parking-management-version }}
+            --set parkingGarages.version=${{ inputs.parking-garages-version }}
+            --set facilityManagement.version=${{ inputs.facility-management-version }}
+            --set defectManagement.version=${{ inputs.defect-management-version }}
         done
