Add latest possibility

--- a/.github/workflows/docker-version.yml
+++ b/.github/workflows/docker-version.yml
@@ -63,8 +63,12 @@ jobs:
       - name: Get current version of frontend docker file
         id: set-frontend
         run: |
-          VERSION=$(gcloud container images list-tags ${{ env.DOCKER_IMG_PATH }}${{ env.FRONTEND}} | head -n 2 | grep -oP '\b\d+\.\d+\.\d+\b')
-          NEW_VERSION=$(echo $VERSION | awk -F. '{print $1"."$2"."$3+1}')
+          VERSION=$(gcloud container images list-tags ${{ env.DOCKER_IMG_PATH }}${{ env.FRONTEND}} | head -n 2 | grep -oP '\b(latest|\d+\.\d+\.\d+)\b')
+          if [ "$VERSION" != "latest" ]; then
+            NEW_VERSION=$(echo $VERSION | awk -F. '{print $1"."$2"."$3+1}')
+          else
+            NEW_VERSION="latest"
+          fi
 
           echo "New Version: $NEW_VERSION"
           echo "version=$NEW_VERSION" >> "$GITHUB_OUTPUT"
@@ -72,8 +76,12 @@ jobs:
       - name: Get current version of docker file
         id: set-parking-garages
         run: |
-          VERSION=$(gcloud container images list-tags ${{ env.DOCKER_IMG_PATH }}${{ env.PARKING_GARAGES}} | head -n 2 | grep -oP '\b\d+\.\d+\.\d+\b')
-          NEW_VERSION=$(echo $VERSION | awk -F. '{print $1"."$2"."$3+1}')
+          VERSION=$(gcloud container images list-tags ${{ env.DOCKER_IMG_PATH }}${{ env.PARKING_GARAGES}} | head -n 2 | grep -oP '\b(latest|\d+\.\d+\.\d+)\b')
+          if [ "$VERSION" != "latest" ]; then
+            NEW_VERSION=$(echo $VERSION | awk -F. '{print $1"."$2"."$3+1}')
+          else
+            NEW_VERSION="latest"
+          fi
 
           echo "New Version: $NEW_VERSION"
           echo "version=$NEW_VERSION" >> "$GITHUB_OUTPUT"
@@ -81,8 +89,12 @@ jobs:
       - name: Get current version of parking-management docker file
         id: set-parking-management
         run: |
-          VERSION=$(gcloud container images list-tags ${{ env.DOCKER_IMG_PATH }}${{ env.PARKING_MANAGEMENT}} | head -n 2 | grep -oP '\b\d+\.\d+\.\d+\b')
-          NEW_VERSION=$(echo $VERSION | awk -F. '{print $1"."$2"."$3+1}')
+          VERSION=$(gcloud container images list-tags ${{ env.DOCKER_IMG_PATH }}${{ env.PARKING_MANAGEMENT}} | head -n 2 | grep -oP '\b(latest|\d+\.\d+\.\d+)\b')
+          if [ "$VERSION" != "latest" ]; then
+            NEW_VERSION=$(echo $VERSION | awk -F. '{print $1"."$2"."$3+1}')
+          else
+            NEW_VERSION="latest"
+          fi
 
           echo "New Version: $NEW_VERSION"
           echo "version=$NEW_VERSION" >> "$GITHUB_OUTPUT"
@@ -90,8 +102,12 @@ jobs:
       - name: Get current version of defect-management docker file
         id: set-defect-management
         run: |
-          VERSION=$(gcloud container images list-tags ${{ env.DOCKER_IMG_PATH }}${{ env.DEFECT_MANAGEMENT}} | head -n 2 | grep -oP '\b\d+\.\d+\.\d+\b')
-          NEW_VERSION=$(echo $VERSION | awk -F. '{print $1"."$2"."$3+1}')
+          VERSION=$(gcloud container images list-tags ${{ env.DOCKER_IMG_PATH }}${{ env.DEFECT_MANAGEMENT}} | head -n 2 | grep -oP '\b(latest|\d+\.\d+\.\d+)\b')
+          if [ "$VERSION" != "latest" ]; then
+            NEW_VERSION=$(echo $VERSION | awk -F. '{print $1"."$2"."$3+1}')
+          else
+            NEW_VERSION="latest"
+          fi
 
           echo "New Version: $NEW_VERSION"
           echo "version=$NEW_VERSION" >> "$GITHUB_OUTPUT"
@@ -99,8 +115,12 @@ jobs:
       - name: Get current version of facility-management docker file
         id: set-facility-management
         run: |
-          VERSION=$(gcloud container images list-tags ${{ env.DOCKER_IMG_PATH }}${{ env.FACILITY_MANGEMENT}} | head -n 2 | grep -oP '\b\d+\.\d+\.\d+\b')
-          NEW_VERSION=$(echo $VERSION | awk -F. '{print $1"."$2"."$3+1}')
+          VERSION=$(gcloud container images list-tags ${{ env.DOCKER_IMG_PATH }}${{ env.FACILITY_MANGEMENT}} | head -n 2 | grep -oP '\b(latest|\d+\.\d+\.\d+)\b')
+          if [ "$VERSION" != "latest" ]; then
+            NEW_VERSION=$(echo $VERSION | awk -F. '{print $1"."$2"."$3+1}')
+          else
+            NEW_VERSION="latest"
+          fi
 
           echo "New Version: $NEW_VERSION"
           echo "version=$NEW_VERSION" >> "$GITHUB_OUTPUT"
@@ -109,8 +129,12 @@ jobs:
       - name: Get current version of user-tenant-management docker file
         id: set-user-tenant-management
         run: |
-          VERSION=$(gcloud container images list-tags ${{ env.DOCKER_IMG_PATH }}${{ env.USER_TENANT_MANAGEMENT}} | head -n 2 | grep -oP '\b\d+\.\d+\.\d+\b')
-          NEW_VERSION=$(echo $VERSION | awk -F. '{print $1"."$2"."$3+1}')
+          VERSION=$(gcloud container images list-tags ${{ env.DOCKER_IMG_PATH }}${{ env.USER_TENANT_MANAGEMENT}} | head -n 2 | grep -oP '\b(latest|\d+\.\d+\.\d+)\b')
+          if [ "$VERSION" != "latest" ]; then
+            NEW_VERSION=$(echo $VERSION | awk -F. '{print $1"."$2"."$3+1}')
+          else
+            NEW_VERSION="latest"
+          fi
 
           echo "New Version: $NEW_VERSION"
           echo "version=$NEW_VERSION" >> "$GITHUB_OUTPUT"
