Correct the line breaks

--- a/.github/workflows/helm-start.yml
+++ b/.github/workflows/helm-start.yml
@@ -92,7 +92,7 @@ jobs:
       run: |
         helm install gateway ${{ env.HELM_CHART_PATH }}/infrastructure/helm --set googleProject.name=${{ secrets.GC_PROJECT_ID }}
         helm install frontend ${{ env.HELM_CHART_PATH }}/frontend/helm \
-          --set googleProject.name=${{ secrets.GC_PROJECT_ID }}
+          --set googleProject.name=${{ secrets.GC_PROJECT_ID }} \
           --set frontend.version=${{ inputs.frontend-version }}
       
     - name: Install Authentication
@@ -101,7 +101,7 @@ jobs:
         helm install authentication ${{ env.HELM_CHART_PATH }}/authentication/helm \
           --set resources.database=${{inputs.database}} \
           --set resources.bucket=${{ inputs.bucket }} \
-          --set googleProject.name=${{ secrets.GC_PROJECT_ID }}
+          --set googleProject.name=${{ secrets.GC_PROJECT_ID }} \
           --set userTenantManagement.version=${{ inputs.user-tenant-management-version }}
 
     # Deploy the Docker image to the GKE cluster
@@ -115,9 +115,9 @@ jobs:
             --set resources.database=${{inputs.database}} \
             --set resources.bucket=${{ inputs.bucket }} \
             --set googleProject.name=${{ secrets.GC_PROJECT_ID }} \
-            --set parkingManagement.version=${{ inputs.parking-management-version }}
-            --set parkingGarages.version=${{ inputs.parking-garages-version }}
-            --set facilityManagement.version=${{ inputs.facility-management-version }}
+            --set parkingManagement.version=${{ inputs.parking-management-version }} \
+            --set parkingGarages.version=${{ inputs.parking-garages-version }} \
+            --set facilityManagement.version=${{ inputs.facility-management-version }} \
             --set defectManagement.version=${{ inputs.defect-management-version }}
         done
 
@@ -139,13 +139,13 @@ jobs:
         helm upgrade gateway ${{ env.HELM_CHART_PATH }}/infrastructure/helm --set googleProject.name=${{ secrets.GC_PROJECT_ID }}
 
         helm upgrade frontend ${{ env.HELM_CHART_PATH }}/frontend/helm \
-          --set googleProject.name=${{ secrets.GC_PROJECT_ID }}
+          --set googleProject.name=${{ secrets.GC_PROJECT_ID }} \
           --set frontend.version=${{ inputs.frontend-version }}
 
         helm upgrade authentication ${{ env.HELM_CHART_PATH }}/authentication/helm \
           --set resources.database=${{inputs.database}} \
           --set resources.bucket=${{ inputs.bucket }} \
-          --set googleProject.name=${{ secrets.GC_PROJECT_ID }}
+          --set googleProject.name=${{ secrets.GC_PROJECT_ID }} \
           --set userTenantManagement.version=${{ inputs.user-tenant-management-version }}
 
         tenants=$(jq -r '.[].name' tenants.json)
@@ -155,8 +155,8 @@ jobs:
             --set resources.database=${{inputs.database}} \
             --set resources.bucket=${{ inputs.bucket }} \
             --set googleProject.name=${{ secrets.GC_PROJECT_ID }} \
-            --set parkingManagement.version=${{ inputs.parking-management-version }}
-            --set parkingGarages.version=${{ inputs.parking-garages-version }}
-            --set facilityManagement.version=${{ inputs.facility-management-version }}
+            --set parkingManagement.version=${{ inputs.parking-management-version }} \
+            --set parkingGarages.version=${{ inputs.parking-garages-version }} \
+            --set facilityManagement.version=${{ inputs.facility-management-version }} \
             --set defectManagement.version=${{ inputs.defect-management-version }}
         done
