--- a/.github/workflows/docker-version.yml
+++ b/.github/workflows/docker-version.yml
@@ -36,6 +36,8 @@ env:
   DEFECT_MANAGEMENT: defect-management
   USER_TENANT_MANAGEMENT: user-tenant-management
 
+  DEFAULT_VERSION: 1.0.0
+
 jobs:
   set-version:
     runs-on: ubuntu-latest
@@ -67,7 +69,7 @@ jobs:
           if [ "$VERSION" != "latest" ]; then
             NEW_VERSION=$(echo $VERSION | awk -F. '{print $1"."$2"."$3+1}')
           else
-            NEW_VERSION="latest"
+            NEW_VERSION=${{env.DEFAULT_VERSION}}
           fi
 
           echo "New Version: $NEW_VERSION"
@@ -80,7 +82,7 @@ jobs:
           if [ "$VERSION" != "latest" ]; then
             NEW_VERSION=$(echo $VERSION | awk -F. '{print $1"."$2"."$3+1}')
           else
-            NEW_VERSION="latest"
+            NEW_VERSION=${{env.DEFAULT_VERSION}}
           fi
 
           echo "New Version: $NEW_VERSION"
@@ -93,7 +95,7 @@ jobs:
           if [ "$VERSION" != "latest" ]; then
             NEW_VERSION=$(echo $VERSION | awk -F. '{print $1"."$2"."$3+1}')
           else
-            NEW_VERSION="latest"
+            NEW_VERSION=${{env.DEFAULT_VERSION}}
           fi
 
           echo "New Version: $NEW_VERSION"
@@ -106,7 +108,7 @@ jobs:
           if [ "$VERSION" != "latest" ]; then
             NEW_VERSION=$(echo $VERSION | awk -F. '{print $1"."$2"."$3+1}')
           else
-            NEW_VERSION="latest"
+            NEW_VERSION=${{env.DEFAULT_VERSION}}
           fi
 
           echo "New Version: $NEW_VERSION"
@@ -119,7 +121,7 @@ jobs:
           if [ "$VERSION" != "latest" ]; then
             NEW_VERSION=$(echo $VERSION | awk -F. '{print $1"."$2"."$3+1}')
           else
-            NEW_VERSION="latest"
+            NEW_VERSION=${{env.DEFAULT_VERSION}}
           fi
 
           echo "New Version: $NEW_VERSION"
@@ -133,7 +135,7 @@ jobs:
           if [ "$VERSION" != "latest" ]; then
             NEW_VERSION=$(echo $VERSION | awk -F. '{print $1"."$2"."$3+1}')
           else
-            NEW_VERSION="latest"
+            NEW_VERSION=${{env.DEFAULT_VERSION}}
           fi
 
           echo "New Version: $NEW_VERSION"
