--- a/.github/workflows/helm-one-tenant.yml
+++ b/.github/workflows/helm-one-tenant.yml
@@ -86,9 +86,9 @@ jobs:
           --set resources.database=${{inputs.database}} \
           --set resources.bucket=${{ inputs.bucket }} \
           --set googleProject.name=${{ secrets.GC_PROJECT_ID }} \
-          --set parkingManagement.version=${{ inputs.parking-management-version }}
-          --set parkingGarages.version=${{ inputs.parking-garages-version }}
-          --set facilityManagement.version=${{ inputs.facility-management-version }}
+          --set parkingManagement.version=${{ inputs.parking-management-version }} \
+          --set parkingGarages.version=${{ inputs.parking-garages-version }} \
+          --set facilityManagement.version=${{ inputs.facility-management-version }} \
           --set defectManagement.version=${{ inputs.defect-management-version }}
 
     - name: Uninstall service
